# DNAdistiller

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  marker_proposal.md
.github/workflows/: ci.yml
data/markers/: caffeine.yaml  clotting.yaml  iron.yaml  lipids.yaml  longevity.yaml  metabolic.yaml  methylation.yaml  neuro.yaml  pharmacogenomics.yaml
docs/: architecture.md  privacy.md
scripts/: block_genetic_data.py  make_demo_genome.py
src/dnadistiller/: __init__.py  cli.py  derive.py  interpret.py  models.py  profile.py  prompts.py
src/dnadistiller/catalog/: __init__.py  validate.py
src/dnadistiller/output/: __init__.py
src/dnadistiller/parsers/: __init__.py  providers.py
tests/: test_catalog_validation.py  test_derive.py  test_diagnostics.py  test_interpret.py  test_parsers.py  test_profile.py
tests/fixtures/: 23andme_basic.txt  23andme_build36.txt  23andme_five_column.txt  README.md  ancestry_basic.txt  ancestry_crlf.txt
