[project]
name = "dnadistiller"
version = "0.1.0"
description = "Build a longevity-focused genetic profile from your consumer DNA file — locally, and share only what you choose."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Lucas Huizinga" }]
keywords = ["dna", "genomics", "longevity", "23andme", "privacy", "snp", "healthspan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

# ----------------------------------------------------------------------------
# Dependencies are deliberately minimal.
#
# This tool reads the most sensitive file a person owns. Users should be able to
# audit it in an afternoon, and "it has no network stack" should be verifiable
# by reading the lockfile rather than by trusting us. Every dependency added
# here is a dependency someone has to trust with their genome, so each one needs
# to earn its place. Notably we do NOT use pandas: looking up a few dozen known
# rsIDs is a dict lookup over a line iterator, not a dataframe problem.
# ----------------------------------------------------------------------------
dependencies = [
    "typer>=0.12",   # CLI framework
    "rich>=13.7",    # terminal rendering; ships with typer anyway
    "pyyaml>=6.0",   # marker catalog is data, not code
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Lucaks3/DNAdistiller"
Repository = "https://github.com/Lucaks3/DNAdistiller"
Issues = "https://github.com/Lucaks3/DNAdistiller/issues"

[project.scripts]
dnadistiller = "dnadistiller.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnadistiller"]

[tool.hatch.build.targets.wheel.force-include]
"data/markers" = "dnadistiller/_data/markers"

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "RUF",      # ruff-specific
    "S",        # flake8-bandit (security)
]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is the point of a test

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
files = ["src/dnadistiller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
